RESOLVED FIXED293172
[WPE] Skip render buffers with mismatched wayland surface size
https://bugs.webkit.org/show_bug.cgi?id=293172
Summary [WPE] Skip render buffers with mismatched wayland surface size
Pablo Saavedra
Reported 2025-05-16 23:29:06 PDT
Avoid Wayland protocol errors (`xdg_wm_base@11: error 4: xdg_surface geometry does not match the configured state`) by skipping frames with sizes that do not match the current view surface geometry.
Attachments
Pablo Saavedra
Comment 1 2025-05-16 23:32:29 PDT
EWS
Comment 2 2025-05-19 04:33:10 PDT
Committed 295091@main (93908c419dcd): <https://commits.webkit.org/295091@main> Reviewed commits have been landed. Closing PR #45539 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.