[WPE] Enforce surface size match when maximized to avoid Wayland errors https://bugs.webkit.org/show_bug.cgi?id=293172

Reviewed by Carlos Garcia Campos.

Prevents xdg_wm_base.invalid_surface_state protocol violations by
checking if view is in maximized state before rendering buffer and
skipping buffers with mismatched scaled dimensions.

This is based on fix proposed in Cog[1].

[1] https://github.com/Igalia/cog/pull/539

* Source/WebKit/WPEPlatform/wpe/wayland/WPEViewWayland.cpp:
(wpeViewWaylandRenderBuffer):

Canonical link: https://commits.webkit.org/295091@main